completed sending and accepting requests, need to do decline & sorting out async js before redirecting or scripts

--- a/views/addFriends/index.hbs
+++ b/views/addFriends/index.hbs
@@ -8,8 +8,8 @@
       <img src="data:image/png;base64, {{this.image}}" alt="profile pic">
       <h4>{{this.firstName}}</h4>
       <p>{{this.email}}</p>
-      <form action="/" method="post">
-        <button>Send Request</button>
+      <form action="/addFriends/send" method="post">
+        <button name="userId" value="{{this._id}}">Send Request</button>
       </form>
     </div>
   {{/each}}
