--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -12,7 +12,7 @@
 <br>
 <div class="card text-center w-75">
   <div class="card-header">
-    <h5>USER: <a href="/users/profile/{{this.user._id}}">{{this.username}}</a></h5>
+    <h5>USER: <a href="/users/profile/{{this.user._id}}"> {{this.username}}</a></h5>
     <img id="profilepic" src="{{user.profilepic}}">
   </div>
   <div class="card-body">
@@ -21,10 +21,15 @@
     <form action="/posts/{{this._id}}/like" method="post"><button type="submit">Like!</button></form>
     </div>
     <p class="card-title"><a class="comments card-title" href="/posts/{{this._id}}">{{this.commentCount}} comments</a></p>
-  
-  <form class="card-title" method="POST" action="/posts/{{this._id}}/delete?_method=DELETE">
-    <input class="form-control me-2" type="submit" value="Delete">
-  </form>
+    {{!-- {{#ifCond this.user._id logged_in_user}}
+        {{this.user._id}} == {{logged_in_user}}
+          <form class="card-title" method="POST" action="/posts/{{this._id}}/delete?_method=DELETE">
+            <input class="form-control me-2" type="submit" value="Delete">
+          </form>
+    {{else}}
+        {{this.user._id}} != {{logged_in_user}}
+          <br>
+    {{/ifCond}} --}}
   
   </div>
 {{/each}}
