Fixed input fields

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,6 +20,11 @@
               </form>
             </li>
             <li>
+              <form action='/posts' method='GET'>
+                <input type="submit" value="Post Timeline">
+              </form>
+            </li> 
+            <li>
               <form action='/posts/new' method='GET'>
                 <input type="submit" value="New post">
               </form>
