--- a/views/users/editmyprofile.hbs
+++ b/views/users/editmyprofile.hbs
@@ -1,15 +1,15 @@
 <h1>Edit your profile</h1>
   <form id="editmyprofile-form" action="/users/account" method="post">
   <label for="bio">Bio: </label>
-  <textarea id="bio" name="bio" rows="1" cols="25">Enter your bio here!</textarea>
+  <textarea id="bio" name="bio" rows="1" cols="25" minlength="2" maxlength="280" placeholder="Enter your bio here!" required></textarea>
   <br>
   <br>
   <label for="location">Location: </label>
-  <input id="location" type="text" name="location" value="">
+  <input id="location" type="text" pattern="{4,16}"  name="location" value="" required>
   <br>
   <br>
   <label for="age">Age: </label>
-  <input id="age" type="number" name="age" value="">
+  <input id="age" type="number" pattern="{1, 2}" name="age" value="" required>
   <br>
   <br>
   <input id="submit" type="submit" value="Submit">
