--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -1,5 +1,5 @@
 <form id="new-post-form" action="/posts" method="post">
   <label for="message">Message: </label>
-  <input id="message" type="text" name="message" value="">
+  <textarea id="message" name="message" rows="1" cols="25" minlength="2" maxlength="280"  placeholder="Enter your post" required></textarea>
   <input type="submit" value="Submit">
 </form>
