--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,10 +1,10 @@
 <form id="new-user-form" action="/users" method="post">
   <label for="first_name">First name: </label>
-  <input id="first_name" type="text" name="first_name" value="">
+  <input id="first_name" type="text" name="first_name" value="" pattern="{2,16}" required>
   <label for="last_name">Last name: </label>
-  <input id="last_name" type="text" name="last_name" value="">
+  <input id="last_name" type="text" name="last_name" value="" pattern="{2,16}" required>
   <label for="email">Email: </label>
-  <input id="email" type="email" name="email" value="">
+  <input id="email" type="email" name="email" value="" pattern="{2,}" required>
   <label for="password">Password: </label>
   <input id="password" type="password" id="psw" name="password" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*_=+-]).{8,16}" title="Must contain at least one number and one uppercase and lowercase letter, one special character, and between 8-16 characters">
   <input id="submit" type="submit" value="Submit">
