--- a/views/home/myprofile.hbs
+++ b/views/home/myprofile.hbs
@@ -6,8 +6,8 @@
 <div id="friends">
   <h2>FRIENDS</h2>
   <ul>
-    {{#each friends }}
-    <li>{{this.name}} - {{this.email}}</li>
+    {{#each friends}}
+      <li>{{this.name}} - {{this.email}}</li>
     {{/each}}
   </ul>
 </div>
@@ -16,13 +16,17 @@
   <h2>SENT REQUESTS</h2>
   <h4><a href="/addFriends">FIND FRIENDS</a></h4>
   <ul>
-    {{#each sent }}
-    <li>
-      <p>{{this.firstName}} - {{this.email}}</p>
-      <form action="/addFriends/cancel" method="post">
-        <button type="submit" name="userId" value="{{this._id}}">Cancel</button>
-      </form>
-    </li>
+    {{#each sent}}
+      <li>
+        <p>{{this.firstName}} - {{this.email}}</p>
+        <form action="/addFriends/cancel" method="post">
+          <button
+            type="submit"
+            name="userId"
+            value="{{this._id}}"
+          >Cancel</button>
+        </form>
+      </li>
     {{/each}}
   </ul>
 </div>
@@ -30,16 +34,24 @@
 <div id="received">
   <h2>RECEIVED REQUESTS</h2>
   <ul>
-    {{#each received }}
-    <li>
-      <p>{{this.firstName}} - {{this.email}}</p>
-      <form action="/addFriends/accept" method="post">
-        <button type="submit" name="userId" value="{{this._id}}">Accept</button>
-      </form>
-      <form action="/addFriends/decline" method="post">
-        <button type="submit" name="userId" value="{{this._id}}">Decline</button>
-      </form>
-    </li>
+    {{#each received}}
+      <li>
+        <p>{{this.firstName}} - {{this.email}}</p>
+        <form action="/addFriends/accept" method="post">
+          <button
+            type="submit"
+            name="userId"
+            value="{{this._id}}"
+          >Accept</button>
+        </form>
+        <form action="/addFriends/decline" method="post">
+          <button
+            type="submit"
+            name="userId"
+            value="{{this._id}}"
+          >Decline</button>
+        </form>
+      </li>
     {{/each}}
   </ul>
 </div>
