--- a/views/addFriends/index.hbs
+++ b/views/addFriends/index.hbs
@@ -1,11 +1,17 @@
 <form action="/addFriends" method="get">
-  <input type="text" name="searchTerm" id="searchTerm" placeholder="Search Here.." required>
-  <input type="submit" value="Find">
+  <input
+    type="text"
+    name="searchTerm"
+    id="searchTerm"
+    placeholder="Search Here.."
+    required
+  />
+  <input type="submit" value="Find" />
 </form>
 <div id="results">
-  {{#each results }}
+  {{#each results}}
     <div class="user">
-      <img src="data:image/png;base64, {{this.image}}" alt="profile pic">
+      <img src="data:image/png;base64, {{this.image}}" alt="profile pic" />
       <h4>{{this.firstName}}</h4>
       <p>{{this.email}}</p>
       <form action="/addFriends/send" method="post">
