--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -21,15 +21,13 @@
     <form action="/posts/{{this._id}}/like" method="post"><button type="submit">Like!</button></form>
     </div>
     <p class="card-title"><a class="comments card-title" href="/posts/{{this._id}}">{{this.commentCount}} comments</a></p>
-    {{!-- {{#ifCond this.user._id logged_in_user}}
-        {{this.user._id}} == {{logged_in_user}}
+    {{#if this.isMine}}
           <form class="card-title" method="POST" action="/posts/{{this._id}}/delete?_method=DELETE">
             <input class="form-control me-2" type="submit" value="Delete">
           </form>
     {{else}}
-        {{this.user._id}} != {{logged_in_user}}
           <br>
-    {{/ifCond}} --}}
+    {{/if}}
   
   </div>
 {{/each}}
