--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,2 +1,13 @@
-<h1 class="title">{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<div class="welcome">
+    <h1 class="title">{{title}}</h1>
+    <p>Welcome to {{title}}</p>
+</div>
