--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,6 +4,7 @@
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <body>
     <nav id="navbar" class="navbar"> 
       <ul style="list-style: none;"class="posts">
