--- a/views/error.hbs
+++ b/views/error.hbs
@@ -6,7 +6,7 @@
 <br>
 <br>
 <br>
-
-<h1>{{message}}</h1>
+<img src="/stylesheets/shocked_molcar.png">
+<h1 class="sign-in-failed">Uh-oh! {{message}}</h1>
 <h2>{{error.status}}</h2>
 <pre>{{error.stack}}</pre>
