--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -8,6 +8,5 @@
 <br>
 
 <div class="welcome">
-    <h1 class="title">{{title}}</h1>
-    <p>Welcome to {{title}}</p>
+    <img src="/stylesheets/welcome_title.png">
 </div>
