--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -7,8 +7,10 @@
 <br>
 <br>
 
-<form id="new-post-form" action="/posts" method="post">
-  <label for="message">Message: </label>
-  <textarea id="message" name="message" rows="1" cols="25" minlength="2" maxlength="280"  placeholder="Enter your post" required></textarea>
-  <input type="submit" value="Submit">
-</form>
+<div class="form">
+  <form id="new-post-form" action="/posts" method="post">
+    <label for="message" class="message">Message: </label>
+    <textarea id="message" name="message" rows="1" cols="25" minlength="2" maxlength="280"  placeholder="Enter your post" required></textarea>
+    <input type="submit" value="Submit">
+  </form>
+</div>
