--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -10,13 +10,13 @@
 <br>
 <div class="signup">
   <form id="new-user-form" action="/users" method="post">
-    <label for="first_name">First name: </label>
+    <label for="first_name" class="signup-field">First name: </label>
     <input id="first_name" type="text" name="first_name" value="" pattern="{2,16}" required>
-    <label for="last_name">Last name: </label>
+    <label for="last_name" class="signup-field">Last name: </label>
     <input id="last_name" type="text" name="last_name" value="" pattern="{2,16}" required>
-    <label for="email">Email: </label>
+    <label for="email" class="signup-field">Email: </label>
     <input id="email" type="email" name="email" value="" pattern="{2,}" required>
-    <label for="password">Password: </label>
+    <label for="password" class="signup-field">Password: </label>
     <input id="password" type="password" id="psw" name="password" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*_=+-]).{8,16}" title="Must contain at least one number and one uppercase and lowercase letter, one special character, and between 8-16 characters">
     <input id="submit" type="submit" value="Submit">
   </form>
