--- a/views/posts/post.hbs
+++ b/views/posts/post.hbs
@@ -3,7 +3,7 @@
 {{! comments go here }}
 <ul>
   {{#each comments}}
-    <li>{{this.message}} - {{this.date}}</li>
+    <li>{{this.message}} - {{this.newCommentTime}}</li>
   {{/each}}
 </ul>
 
