--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,15 +24,20 @@ a {
 }
 
 #message {
-  width: 600px; 
-  height: 100px; 
-  border: 1px solid #999999; 
-  padding: 5px; 
+  width: 600px;
+  height: 100px;
+  border: 1px solid #999999;
+  padding: 5px;
 }
 
 #profilepic {
-  width: 100px; 
+  width: 100px;
   height: 100px;
   border-radius: 50%;
   opacity: 0.7;
+}
+
+.friend-profile-pic {
+  width: 27;
+  height: 27px;
 }
