app crashes post merge with main resolved

--- a/views/addFriends/index.hbs
+++ b/views/addFriends/index.hbs
@@ -11,11 +11,9 @@
 <div id="results">
   {{#each results}}
     <div class="user">
-      <img src="data:image/png;base64, {{this.image}}" alt="profile pic" />
+       <img src="data:image/png;base64,{{this.image}}" class="img-circle" height="150" width="150" alt="Avatar">
       <h4>{{this.firstName}}</h4>
       <p>{{this.email}}</p>
-      <img src="data:image/png;base64,{{this.image}}"  height="150" width="150" alt="Avatar">
-       <p>{{this.image}}</p>
       <form action="/addFriends/send" method="post">
         <button name="userId" value="{{this._id}}">Send Request</button>
       </form>
