images showing up in posts

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -21,7 +21,9 @@
     <form action="/posts/{{this._id}}/like" method="post"><button type="submit">Like!</button></form>
     </div>
     <p class="card-title"><a class="comments card-title" href="/posts/{{this._id}}">{{this.commentCount}} comments</a></p>
-  
+  {{#if this.image}}
+  <img id="postpic" src="/uploads/{{this.image}}">
+  {{/if}}
   <form class="card-title" method="POST" action="/posts/{{this._id}}/delete?_method=DELETE">
     <input class="form-control me-2" type="submit" value="Delete">
   </form>
